Fix the y-axis values to be more reasonable and visible.

--- a/ritoplzmyapitems/app/scatter/scatter.less
+++ b/ritoplzmyapitems/app/scatter/scatter.less
@@ -16,6 +16,7 @@
 .yAxis {
   text {
     font: 10px sans-serif;
+    color: #000;
   }
 }
 .yAxis path,.yAxis line {
